--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,10 +3,14 @@
 <html lang="zh-cn">
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="renderer" content="webkit" />
     <title>操作你的PPT</title>
+    <link rel="icon" href="/logo.ico">
     <style>
         div {
-            font-size:25px
+            font-size: 25px
         }
     </style>
 </head>
@@ -16,8 +20,6 @@
     </div>
     <script src="hammer.min.js"></script>
     <script>
-        //const note = document.querySelector("#node")
-
         function httpGet(url, cb) {
             fetch(url, {
                 headers: {
@@ -35,19 +37,29 @@
 
         const note = document.querySelector("#note");
 
-
+        let hasRun = true
         let getNotes = setInterval(() => {
             httpGet('/getNote', (text) => {
                 
                 note.innerText = text
             })
-        }, 1000)
+        }, 500)
 
         function nextPage() {
             httpGet('/next', (text) => {
                 if (text == 'NO') {
                     clearInterval(getNotes)
                     note.innerText = "幻灯片播放完毕！"
+                    hasRun = false
+                } else {
+                    if (!hasRun) {
+                        getNotes = setInterval(() => {
+                            httpGet('/getNote', (text) => {
+                                note.innerText = text
+                            })
+                        }, 500)
+                        hasRun = true
+                    }
                 }
             })
         }
@@ -57,6 +69,16 @@
                 if (text == 'NO') {
                     clearInterval(getNotes)
                     note.innerText = "幻灯片播放完毕！"
+                    hasRun = false
+                } else {
+                    if (!hasRun) {
+                        getNotes = setInterval(() => {
+                            httpGet('/getNote', (text) => {
+                                note.innerText = text
+                            })
+                        }, 500)
+                        hasRun = true
+                    }
                 }
             })
         }
