--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,97 +1,5 @@
-﻿<!DOCTYPE html>
-
-<html lang="zh-cn">
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="renderer" content="webkit" />
-    <title>操作你的PPT</title>
-    <link rel="icon" href="/logo.ico">
-    <style>
-        div {
-            font-size: 25px
-        }
-    </style>
-</head>
-<body>
-    <div id="main" style="width:100vw;height:100vh;">
-        <p id="note"></p>
-    </div>
-    <script src="hammer.min.js"></script>
-    <script>
-        function httpGet(url, cb) {
-            fetch(url, {
-                headers: {
-                    'Content-Type': 'application/json; charset=UTF-8'
-                },
-                method: 'GET'
-            }).then(response => response.text())
-                .then(text => {
-                    cb(text)
-                })
-                .catch(e => {
-                    return null
-                })
-        }
-
-        const note = document.querySelector("#note");
-
-        let hasRun = true
-        let getNotes = setInterval(() => {
-            httpGet('/getNote', (text) => {
-                
-                note.innerText = text
-            })
-        }, 500)
-
-        function nextPage() {
-            httpGet('/next', (text) => {
-                if (text == 'NO') {
-                    clearInterval(getNotes)
-                    note.innerText = "幻灯片播放完毕！"
-                    hasRun = false
-                } else {
-                    if (!hasRun) {
-                        getNotes = setInterval(() => {
-                            httpGet('/getNote', (text) => {
-                                note.innerText = text
-                            })
-                        }, 500)
-                        hasRun = true
-                    }
-                }
-            })
-        }
-
-        function previousPage() {
-            httpGet('/previous', (text) => {
-                if (text == 'NO') {
-                    clearInterval(getNotes)
-                    note.innerText = "幻灯片播放完毕！"
-                    hasRun = false
-                } else {
-                    if (!hasRun) {
-                        getNotes = setInterval(() => {
-                            httpGet('/getNote', (text) => {
-                                note.innerText = text
-                            })
-                        }, 500)
-                        hasRun = true
-                    }
-                }
-            })
-        }
-
-        var hammer = new Hammer(document.querySelector("#main"));
-        hammer.on("swipeleft", function () {
-            nextPage();
-        });
-        hammer.on("swiperight", function () {
-            previousPage();
-        });
-
-        
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="author" content="www.buguagaoshu.com"><link rel="icon" href="/logo.ico"><title>PPT遥控器</title><link rel="stylesheet" href="/css/css.css"><link rel="stylesheet" href="/css/materialdesignicons.min.css"><link href="/js/about.785ae707.js" rel="prefetch"><link href="/css/app.5d5bd3a6.css" rel="preload" as="style"><link href="/css/chunk-vendors.733c643b.css" rel="preload" as="style"><link href="/js/app.2d5a8347.js" rel="preload" as="script"><link href="/js/chunk-vendors.a6a908b5.js" rel="preload" as="script"><link href="/css/chunk-vendors.733c643b.css" rel="stylesheet"><link href="/css/app.5d5bd3a6.css" rel="stylesheet"></head><body><!--[if IE]>
+      <script>
+      window.location.replace("/old/index.html")
     </script>
-</body>
-</html>
+      <![endif]--><noscript><strong>We're sorry but ppt-remote-control doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.a6a908b5.js"></script><script src="/js/app.2d5a8347.js"></script></body></html>
